--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,23 @@ rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
 rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
 
 [dependencies]
+config = "0.13"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
+
+# Using table-like toml syntax to avoid a super-long line!
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+"runtime-tokio-rustls",
+"macros",
+"postgres",
+"uuid",
+"chrono",
+"migrate"
+]
 
 
 [dev-dependencies]
