--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -1,6 +1,13 @@
 name: Rust
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - db-setup
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - db-setup
 
 env:
   CARGO_TERM_COLOR: always
