--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,13 @@ rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
 rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
 
 [dependencies]
+tracing-actix-web = "0.7"
+secrecy = { version = "0.8", features = ["serde"] }
+once_cell = "1"
+tracing-log = "0.1"
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
 config = "0.13"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
