--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,10 +49,19 @@ features = [
 "offline"
 ]
 
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+# We need the `json` feature flag to serialize/deserialize JSON payloads
+features = ["json", "rustls-tls"]
+
 
 [dev-dependencies]
+linkify = "0.9"
+serde_json = "1"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 fake = "~2.3"
 claims = "0.7"
-reqwest = "0.11"
+tokio = { version = "1", features = ["rt", "macros"] }
+wiremock = "0.5"
