--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
 rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
 
 [dependencies]
+anyhow = "1"
+thiserror = "1"
 validator = "0.16"
 unicode-segmentation = "1"
 serde-aux = "4"
